Bug 169399 - A text in a nested section jumps to next page
Summary: A text in a nested section jumps to next page
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Section
  Show dependency treegraph
 
Reported: 2025-11-12 10:54 UTC by Mike Kaganski
Modified: 2026-04-22 13:33 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Text should all be on a single page (2.32 KB, application/vnd.oasis.opendocument.text)
2025-11-12 10:54 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-11-12 10:54:52 UTC
Created attachment 203894 [details]
Text should all be on a single page

In the attachment, there is a text box and some sections. Everything must fit on a single page.

Upon loading, the last section (with the text "Must be on page 1") appears on page 2. Toggling formatting marks makes the text go to page 1, as expected.
Comment 1 m_a_riosv 2025-11-12 21:43:29 UTC
With Menu>Tools>Update>Update all, it returns to the firs page. With formatting marks already enable at opening the file.
Comment 2 rram 2025-11-17 02:40:43 UTC
Hello Mike Kaganski,

Thank you for reporting the bug. The issue is present in both the master and alpha builds.

When opening the shared file and using Ctrl + F10 to toggle formatting on and off, it moves the text to the first page, but if formatting is turned off, the file is saved, closed, and reopened, the original issue returns. 

Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 tkakar 2025-11-17 02:45:27 UTC
Confirmed. 

Tested in:

Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Buovjaga 2025-11-17 19:24:06 UTC
Bibisected with linux-64-24.8 to 607fcac441c7f3a7d3c169c19039e581d707f2bb
tdf#160067 sw floattable: fix missing move bwd of paras in split section frame
Comment 5 Commit Notification 2025-11-27 17:25:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/02a1edc64bde14401899d0f026d49dbf125e3ffc

tdf#169399: try again when frames were moved forward by objects

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-11-28 16:11:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/cca30ce7a043cdeab43ad2cf3b6bf92c574346c4

tdf#169399: try again when frames were moved forward by objects

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gabor Kelemen (Collabora) 2025-12-04 09:01:24 UTC
Tested in 

Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 4b498646142e4d0acb8eb2e50eb503ac6002d82e
CPU threads: 32; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

now the document is a single page on opening.