tdf#169399: try again when frames were moved forward by objects

The problem in the bug document was caused by the extra call to
SwFrame::OptCalc in SwLayAction::FormatLayout. It was there since
initial import, as a shortcut; but its conditions were changed in
commits 610c6f02b11b4b4c555a78b0feb2a1eb35159e39 (tdf#156724
tdf#156722 tdf#156745 sw: layout: partially remove IsPaintLocked(),
2023-08-14), 61a78a523a6131ff98b5d846368e5626fe58d99c (tdf#156724
tdf#156722 sw: layout: remove IsPaintLocked() check, 2023-08-15).
Commit c303981cfd95ce1c3881366023d5495ae2edce97 (tdf#156724 sw:
layout: fix tables not splitting due to footnotes differently,
2023-08-24) had dropped that code completely, but it was restored
in commit 397d72e582c725d162c7e0b819dc6c0bb62e42b0 (Related:
tdf#158986 sw floattable: fix unexpected page break with sections,
2024-02-23), with more strict conditions. Its conditions were
restricted in commit 607fcac441c7f3a7d3c169c19039e581d707f2bb
(tdf#160067 sw floattable: fix missing move bwd of paras in split
section frame, 2024-04-08). There, it was noted, that "probably a
cleaner way would be to completely stop calculating content frames
in SwLayAction::FormatLayout() and only do that in FormatContent()",
which emphasizes the problematic nature of that code.

I looked into restricting the conditions there more for the bug
document, but failed to come with the working condition. So the
change drops that code again, and tries to keep the bugs fixed by
re-introduction of that code fixed.

My understanding of the mechanism causing tdf#158986 is following:

Document's SwLayouter keeps track of the nodes, which frames were
moved forward by objects. This data will disallow those frames from
moving backwards (see uses of SwLayouter::FrameMovedFwdByObjPos).

The problem in the bug document comes from the fly attached to a
paragraph inside a multicolumn section. During the iterative layout
of the section, there is a stage where the height of the section is
too small for the object, and its paragraph gets moved forward to
a new page (together with some previous paragraphs). When layout
finishes, the height of the section is enough, but the paragraph
cannot move back, keeping the extra page.

I tried hard to solve it in many less-bruteforce ways. The ideas
included prevention of the wrong too small section height during
layout (e.g., in lcl_FormatContentOfLayoutFrame); attempts to find
a place where a specific "moved forward" record becomes obsolete
and should be removed (tried to modify fly.cxx' CalcContent and
SwObjectFormatterTextFrame::DoFormatObj); and modifications to let
page body's resize code (called when a section's height is changed)
to re-position the objects. But all these attempts produced layout
loops.

This change introduces a hack. In SwLayAction::Action, when the
first call to InternalAction increases the number of frames that
were moved forward, it clears the layouter entries, and tries once
more. I hope that at some point, a better fix will be possible.

Change-Id: I47315473982cb1fe5c8d77f7603cd24de08afa89
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194712
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194759