sw/source/core/layout/layouter.cxx
@@ -370,6 +370,27 @@ bool SwLayouter::FrameMovedFwdByObjPos( const SwDoc& _rDoc,
     }
 }
 
+// static
+size_t SwLayouter::GetMovedFwdFramesCount(const SwDoc& _rDoc)
+{
+    if (_rDoc.getIDocumentLayoutAccess().GetLayouter()
+        && _rDoc.getIDocumentLayoutAccess().GetLayouter()->mpMovedFwdFrames)
+    {
+        return _rDoc.getIDocumentLayoutAccess().GetLayouter()->mpMovedFwdFrames->Count();
+    }
+    return 0;
+}
+
+// static
+void SwLayouter::InvalidateMovedFwdFrames(const SwDoc& _rDoc)
+{
+    if (_rDoc.getIDocumentLayoutAccess().GetLayouter()
+        && _rDoc.getIDocumentLayoutAccess().GetLayouter()->mpMovedFwdFrames)
+    {
+        _rDoc.getIDocumentLayoutAccess().GetLayouter()->mpMovedFwdFrames->InvalidateAll();
+    }
+}
+
 // #i26945#
 bool SwLayouter::DoesRowContainMovedFwdFrame( const SwDoc& _rDoc,
                                             const SwRowFrame& _rRowFrame )
